--- a/src/app/non-secure/mydevices/mydevices.component.html
+++ b/src/app/non-secure/mydevices/mydevices.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-        <div *ngIf="!activeGame" class="row">
+        <div *ngIf="!gameID" class="row">
 
             <h5 *ngIf="!gameCardData.length"> Check back later. Games pop up all the time! </h5>
 
@@ -33,8 +33,7 @@
         </div>
 
 
-    <div *ngIf="activeGame" class="view-account" id="activeGame">
-
+    <div *ngIf="gameID" class="view-account">
             <!-- <div class="module-inner"> -->
                 <!-- <div class="side-bar float-center"> -->
                     <!-- <nav class="side-menu"> -->
@@ -77,7 +76,7 @@
                       <div class="row">
 
                         <div class="col-md-6">
-                        <app-map [mapID]="map" [(deviceData)]="scoreSvc.devices"></app-map>
+                        <app-map [mapID]="map" [(deviceData)]="scoreSvc.devices" [gameID]="gameID"></app-map>
                         </div>
 
                         <div class="col-md-6">
