fix layout for game-history menu options

--- a/src/app/secure/game-history/game-history.component.html
+++ b/src/app/secure/game-history/game-history.component.html
@@ -62,7 +62,7 @@
 
             </div>
 
-            <div class="col px-1 py-1 gx-1 gy-1">
+            <div class="col-sm px-1 py-1 gx-1 gy-1">
 
               <select class="form-control" (change)="changeGameMode($event)">
                   <option disabled selected> -- Select Game Mode -- </option>
