--- a/src/app/global/device-list/device-list.component.html
+++ b/src/app/global/device-list/device-list.component.html
@@ -10,7 +10,7 @@
 
             <div class="modal-body">
 
-                        <div class="center-cust row">
+                        <div class="center-cust row px-0">
 
                             <div *ngFor="let device of devices; let i = index" class="card user-card">
 
