update name on game history chart

--- a/src/app/secure/game-history/game-history.component.html
+++ b/src/app/secure/game-history/game-history.component.html
@@ -75,7 +75,7 @@
                   class="material striped"
                   [rows]="selectedMode.games"
                   rowHeight="auto"
-                  [columns]="[ {name:'Game Date', prop:'creationDate', sortable:false} ]"
+                  [columns]="[ {name:'Game Date, Time', prop:'creationDate', sortable:false} ]"
                   [columnMode]="'force'"
                   [selectionType]="'single'"
                   [limit]="5"
