center field name in game history

--- a/src/app/secure/game-history/game-history.component.html
+++ b/src/app/secure/game-history/game-history.component.html
@@ -60,7 +60,7 @@
 
         <div class="container px-0">
 
-          <div class="card-header row">
+          <div class="card-header center-cust row">
             <h5> {{selectedField.name}} ({{getTotalGamesFromField(selectedField)}})</h5>
           </div>
 
