--- a/src/app/secure/game-history/game-history.component.scss
+++ b/src/app/secure/game-history/game-history.component.scss
@@ -1,6 +1,11 @@
 
 @import "../../../assets/libs/font-awesome-4.7.0/scss/font-awesome.scss";
 
+.center-cust{
+    justify-content: center;
+    text-align: center;
+}
+
 .row {
   padding: 1rem;
 }
