--- a/src/app/global/map/map.component.scss
+++ b/src/app/global/map/map.component.scss
@@ -105,7 +105,7 @@ path.demo {
   transform-box    : fill-box;
   transform        : scale(0.8);
   stroke-width: 2px;
-  stroke-dasharray: 10;
+  stroke-dasharray: 6.25%;
   stroke: #FF0000;
   fill: #CC5500;
   opacity: 0.5;
@@ -116,14 +116,14 @@ path.demo {
       stroke-dashoffset: 0;
   }
   50% {
-      stroke-dashoffset: 10;
+      stroke-dashoffset: 6.25%;
       fill: #FF0000;
       opacity: 0.75;
       transform: scale(0.85);
       filter: drop-shadow(0 0 0.5rem #FAA) drop-shadow(0 0 .5rem #C50) drop-shadow(0 0 .25rem #FAA);
   }
   100% {
-      stroke-dashoffset: 20;
+      stroke-dashoffset: 12.5%;
   }
 }
 
