--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -32,7 +32,7 @@
             <!-- NON SECURE LINKS BELOW -->
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0" *ngIf="!isSecure">
                 <li class="nav-item">
-                    <a class="nav-link" id="nav_home" [routerLink]="['/non-secure/home']">Home </a>
+                    <a class="nav-link" id="nav_home" (click)="route('/non-secure/home')" >Home </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="nav_featureList" [routerLink]="['/non-secure/how-to-use']"> How it works </a>
@@ -65,7 +65,7 @@
                     <a class="nav-link" id="secure_nav_mygame" [routerLink]="['/secure/live-games']">LIVE Games</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="secure_nav_pastgame" [routerLink]="['/secure/past-games']">Past Games</a>
+                    <a class="nav-link" id="secure_nav_pastgame"  (click)="route('/secure/past-games')" >Past Games</a>
                 </li>
             </ul>
 
