--- a/src/app/non-secure/features-list/features-list.component.html
+++ b/src/app/non-secure/features-list/features-list.component.html
@@ -6,7 +6,7 @@
             <h5 class="mt-4"> <span class="p-2 bg-light shadow rounded text-success"> Version 1.0.2</span> - 15th July 2021</h5>
             <ul class="list-unstyled mt-3">
                 <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Replay games in game history.</li>
-                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Syling improvements.</li>
+                <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Styling improvements.</li>
                 <li class="text-muted ml-3"><i class="mdi mdi-circle-medium mr-2"></i>Bug fixes.</li>
             </ul>
 
